--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,6 +1,6 @@
-.navbar-light .navbar-nav .nav-link {
+/* .navbar-light .navbar-nav .nav-link {
     font-weight: 600;
-}
+} */
 
 .card-sale {
     background: red;
