--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -13,12 +13,22 @@
     font-weight: bold;
 }
 
+.card-product-title {
+    height: 66px;
+    padding: 5px 0;
+}
+.card-product-category {
+    height: 21px;
+    padding: 5px 0;
+}
+
 .card-product-rating {
     display: flex;
     align-items: center;
     font-size: 0.875rem;
     margin-top: .5rem;
     height: 21px;
+    padding: 5px 0;
 }
 
 .card-product-rating svg {
@@ -29,6 +39,7 @@
 .card-product-price {
     font-weight: bold;
     height: 32px;
+    padding: 5px 0;
 }
 
 .card-product-price .sale {
