--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -9,8 +9,9 @@
     border-color: transparent transparent transparent #ffffff;
     height: 0;
     line-height: 0;
-    padding: 0;
+    padding: 0 0 0 5px;
     font-weight: bold;
+    text-shadow: 0 0 white;
 }
 
 .card-product-title {
@@ -185,4 +186,8 @@
 
 .product-card .card-body {
     padding: 0 !important;
+}
+
+.ant-message {
+    top: 45px !important;
 }
