--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -9,9 +9,8 @@
     border-color: transparent transparent transparent #ffffff;
     height: 0;
     line-height: 0;
-    padding: 0 0 0 5px;
+    padding: 0;
     font-weight: bold;
-    text-shadow: 0 0 white;
 }
 
 .card-product-title {
@@ -39,7 +38,7 @@
 
 .card-product-price {
     font-weight: bold;
-    height: 32px;
+    height: 43px;
     padding: 5px 0;
 }
 
@@ -188,6 +187,11 @@
     padding: 0 !important;
 }
 
-.ant-message {
-    top: 45px !important;
+
+.product-view-cart {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+}
+.collapse {
+    visibility: unset;
 }
