--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -17,6 +17,7 @@
     height: 66px;
     padding: 5px 0;
 }
+
 .card-product-category {
     height: 21px;
     padding: 5px 0;
@@ -73,11 +74,13 @@
     gap: 10px;
     align-items: center;
 }
+
 .btn-quantity {
     border: 1px solid #ccc;
     height: 30px;
 }
-.btn-quantity .btn{
+
+.btn-quantity .btn {
     height: 30px;
     padding: 10px;
     display: flex;
@@ -96,6 +99,7 @@
     display: flex;
     justify-content: center;
 }
+
 .header-avatar {
     width: 30px;
     height: 30px;
@@ -105,11 +109,13 @@
     padding: 0 !important;
     margin: 8px 10px 8px 20px;
 }
+
 .header-avatar img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
 .profile-avatar .wrap {
     position: relative;
     cursor: pointer;
@@ -125,6 +131,7 @@
     height: 100%;
     object-fit: cover;
 }
+
 .profile-avatar .icon {
     position: absolute;
     width: 30px;
@@ -137,18 +144,22 @@
     padding: 5px;
     display: flex;
 }
+
 .profile-avatar .icon img {
     width: 100%;
     height: 100%;
 }
+
 .card-action-right-bottom {
     position: absolute;
     bottom: 2rem;
     right: 1.25rem;
 }
+
 .color-success {
     color: rgb(38, 188, 78);
 }
+
 .color-success:hover {
     color: rgb(30 152 62);
 }
@@ -166,6 +177,7 @@
 .card-img-hover {
     height: 100%;
 }
+
 .card-img-hover .card-img-front,
 .card-img-hover .card-img-back {
     height: 100%;
@@ -192,6 +204,40 @@
     padding-left: 0 !important;
     padding-right: 0 !important;
 }
+
 .collapse {
     visibility: unset;
+}
+
+
+.pageFadeIn {
+    animation: 0.5s fadeIn forwards;
+}
+
+.pageFadeOut {
+    animation: 0.5s fadeOut forwards;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        /* transform: translate(0, -20px); */
+    }
+
+    to {
+        opacity: 1;
+        /* transform: translate(0px, 0px); */
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+        /* transform: translate(0px, 0px); */
+    }
+
+    to {
+        /* transform: translate(-20px, 0); */
+        opacity: 0;
+    }
 }
