--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -208,7 +208,10 @@
 .collapse {
     visibility: unset;
 }
-
+.ant-popover-content span[role="img"] {
+    display: block;
+    line-height: 0 !important;
+}
 
 .pageFadeIn {
     animation: 0.5s fadeIn forwards;
