--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -287,3 +287,9 @@ input[type=number] {
         opacity: 0;
     }
 }
+
+.ant-badge {
+    line-height: unset !important;
+    font-family: unset;
+    font-size: unset;
+}
